[package]
name = "deb-rust-sec"
version = "0.1.0"
authors = ["Alexander Kjäll <alexander.kjaell@schibsted.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.17.5"
anyhow = "1.0"
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
dirs = "2.0"
rustsec = "0.21.0"
regex = "1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
prettytable-rs = "0.8.0"
