[package]
name = "deb-rust-sec"
description = "A tool that lists rust security advisories that affect Debian"
version = "0.1.0"
authors = ["Alexander Kjäll <alexander.kjall@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/alexanderkjall/deb-rust-sec"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19"
anyhow = "1.0"
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
dirs = "2.0"
rustsec = "0.26.4"
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
prettytable-rs = "0.10.0"
